# rnix-lsp

./: .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  flake-compat.nix  flake.nix  run-me.vim  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: test.yml
nix/: sources.json
playground/: imported-set.nix  lambda.nix  main.nix  math.nix  recursive-set.nix
src/: builtins.rs  derivation.nix  error.rs  eval.rs  format.rs  lookup.rs  main.rs  models.rs  parse.rs  scope.rs  static_analysis.rs  tests.rs  utils.rs  value.rs
