[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "A work-in-progress language server for Nix, with syntax checking and basic completion"
keywords = ["rnix", "nix", "languageserver", "lsp"]
categories = ["text-editors", "parser-implementations", "development-tools::testing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nix-community/rnix-lsp"
edition = "2018"
name = "rnix-lsp"
version = "0.2.1"

[dependencies]
dirs = "3.0.2"
env_logger = "0.9.0"
gc = { version = "0.4", features = ["derive"] }
lazy_static = "1.4"
libc = "0.2.66"
log = "0.4.8"
lsp-server = "0.5.2"
lsp-types = { version = "0.89.2", features = ["proposed"] }
nixpkgs-fmt = "1.2.0"
regex = "1"
rnix = "0.9.1"
rowan = "0.12.6"
serde = "1.0.104"
serde_json = "1.0.44"

[dev-dependencies]
stoppable_thread = "0.2"

[features]

# Set this to ["verbose"] when debugging
default = []

# Enable showing internal errors via editor UI, such as via hover popups.
# This can be helpful for debugging, but we don't want the evaluator to
# spam users when confused, so this is disabled by default.
verbose = []

# # Helpful for trying different rnix-parser versions
# [patch.crates-io]
# rnix = { path = "../rnix-parser" }
