[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "A work-in-progress language server for Nix, with syntax checking and basic completion"
keywords = ["rnix", "nix", "languageserver", "lsp"]
categories = ["text-editors", "parser-implementations", "development-tools::testing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nix-community/rnix-lsp"
edition = "2018"
name = "rnix-lsp"
version = "0.2.4"

[dependencies]
dirs = "3.0.2"
env_logger = "0.9.0"
lazy_static = "1.4"
libc = "0.2.66"
log = "0.4.8"
lsp-server = "0.5.2"
lsp-types = { version = "0.89.2", features = ["proposed"] }
regex = "1"
rnix = "0.10.1"
rowan = "0.12.6"
serde = "1.0.104"
serde_json = "1.0.44"
nixpkgs-fmt-rnix = "1.2.0"
