[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "A work-in-progress language server for Nix, with syntax checking and basic completion"
keywords = ["rnix", "nix", "languageserver", "lsp"]
categories = ["text-editors", "parser-implementations", "development-tools::testing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nix-community/rnix-lsp"
edition = "2018"
name = "rnix-lsp"
version = "0.3.0-dev"

[dependencies]
dirs = "4.0.0"
env_logger = "0.9.0"
gc = { version = "0.4.1", features = ["derive"] }
lazy_static = "1.4.0"
libc = "0.2.126"
log = "0.4.17"
lsp-server = "0.6.0"
lsp-types = { version = "0.93.0", features = ["proposed"] }
regex = "1.5.6"
rnix = "0.10.2"
serde = "1.0.138"
serde_json = "1.0.82"
nixpkgs-fmt-rnix = "1.2.0"
maplit = "1"

[dev-dependencies]
stoppable_thread = "0.2.1"

[features]

# Set this to ["verbose"] when debugging
default = []

# Enable showing internal errors via editor UI, such as via hover popups.
# This can be helpful for debugging, but we don't want the evaluator to
# spam users when confused, so this is disabled by default.
verbose = []
